// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClassDisplay Should render correctly with a "populated" classData property 1`] = `
<div
  className="scheduleClass"
>
  <div
    className="classLabel"
    onClick={[Function]}
  >
     
    <br />
     
    0
     - 
    1
    <br />
  </div>
  <div
    className="timeLabel"
    style={
      Object {
        "display": "none",
      }
    }
  >
    class
    <br />
    <br />
    CRN: 
    <br />
    Credits: 
  </div>
</div>
`;

exports[`ClassDisplay Should render correctly with a null classData property 1`] = `
<div
  className="scheduleClass"
>
  <div
    className="classLabel"
    onClick={[Function]}
  >
     
    <br />
     
     - 
    <br />
  </div>
  <div
    className="timeLabel"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <br />
    <br />
    CRN: 
    <br />
    Credits: 
  </div>
</div>
`;

exports[`ClassDisplay Should render correctly with no classData property 1`] = `
<div
  className="scheduleClass"
>
  <div
    className="classLabel"
    onClick={[Function]}
  >
     
    <br />
     
     - 
    <br />
  </div>
  <div
    className="timeLabel"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <br />
    <br />
    CRN: 
    <br />
    Credits: 
  </div>
</div>
`;

exports[`ScheduleDisplay Should render correctly with a "populated" schedule property 1`] = `
<span
  className="scheduleOption"
>
  <div
    className="scheduleContainer"
  >
    <ClassDisplay
      classData={Array []}
      key="class-0"
      selected={false}
      updateDisplay={[Function]}
    />
    <ClassDisplay
      classData={Array []}
      key="class-1"
      selected={false}
      updateDisplay={[Function]}
    />
  </div>
</span>
`;

exports[`ScheduleDisplay Should render correctly with a null schedule property 1`] = `
<span
  className="scheduleOption"
>
  <div
    className="scheduleContainer"
  />
</span>
`;

exports[`ScheduleDisplay Should render correctly with no schedule property 1`] = `
<span
  className="scheduleOption"
>
  <div
    className="scheduleContainer"
  />
</span>
`;

exports[`ScheduleDisplay Should update schedule display 1`] = `
<span
  className="scheduleOption"
>
  <div
    className="scheduleContainer"
  />
</span>
`;

exports[`SchedulesContainer Should not connect to schedule database properly 1`] = `
<section
  id="main"
>
  <div
    id="name"
  >
    Schedule Name:
    <input
      id="scheduleName"
      onChange={[Function]}
      placeholder="Enter Schedule Name Here"
      type="text"
    />
  </div>
  <div
    className="pdfdim"
    id="divToPrint"
  >
    <Connect(schedulesList) />
  </div>
  <div
    className="bottom"
  >
    <button
      onClick={[Function]}
    >
      Save As PDF
    </button>
    <button
      className="return"
      onClick={[Function]}
    >
      Return
    </button>
  </div>
</section>
`;

exports[`SchedulesContainer Should render correctly with a "populated" schedules property 1`] = `
<section
  id="main"
>
  <div
    id="name"
  >
    Schedule Name:
    <input
      id="scheduleName"
      onChange={[Function]}
      placeholder="Enter Schedule Name Here"
      type="text"
    />
  </div>
  <div
    className="pdfdim"
    id="divToPrint"
  >
    <Connect(schedulesList) />
  </div>
  <div
    className="bottom"
  >
    <button
      onClick={[Function]}
    >
      Save As PDF
    </button>
    <button
      className="return"
      onClick={[Function]}
    >
      Return
    </button>
  </div>
</section>
`;

exports[`SchedulesContainer Should render correctly with a null schedules property 1`] = `
<section
  id="main"
>
  <div
    id="name"
  >
    Schedule Name:
    <input
      id="scheduleName"
      onChange={[Function]}
      placeholder="Enter Schedule Name Here"
      type="text"
    />
  </div>
  <div
    className="pdfdim"
    id="divToPrint"
  >
    <Connect(schedulesList) />
  </div>
  <div
    className="bottom"
  >
    <button
      onClick={[Function]}
    >
      Save As PDF
    </button>
    <button
      className="return"
      onClick={[Function]}
    >
      Return
    </button>
  </div>
</section>
`;

exports[`SchedulesContainer Should render correctly with no schedules property 1`] = `
<section
  id="main"
>
  <div
    id="name"
  >
    Schedule Name:
    <input
      id="scheduleName"
      onChange={[Function]}
      placeholder="Enter Schedule Name Here"
      type="text"
    />
  </div>
  <div
    className="pdfdim"
    id="divToPrint"
  >
    <Connect(schedulesList) />
  </div>
  <div
    className="bottom"
  >
    <button
      onClick={[Function]}
    >
      Save As PDF
    </button>
    <button
      className="return"
      onClick={[Function]}
    >
      Return
    </button>
  </div>
</section>
`;
